Basic Timer setup, and it stops when hit 0

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Quiz</title>
   </head>
   <body>
     <header>
-        <h1>Quiz</h1>
+      <h1>Quiz</h1>
     </header>
     <main>
-        <section id="container">
-            <p id="question"></p>
-            <ul id="choices"></ul>
-        </section>
+      <section id="container">
+        <p id="question"></p>
+        <ul id="choices"></ul>
+      </section>
+      <div id="timer">Time left: <span id="time">5</span> seconds</div>
     </main>
     <footer></footer>
     <script src="assets/script/script.js"></script>
