cleaner timer, proper var names.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p id="question"></p>
         <ul id="choices"></ul>
       </section>
-      <div id="timer">Time left: <span id="time">5</span> seconds</div>
+      <div id="timer">Time left: <span id="time"></span> seconds</div>
     </main>
     <footer></footer>
     <script src="assets/script/script.js"></script>
