Add style to, quesiton, timer, and created and styles start button.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul id="choices"></ul>
       </section>
       <div id="timer">Time left: <span id="time"></span> seconds</div>
+      <button id="start">Start</button>
     </main>
     <footer></footer>
     <script src="assets/script/script.js"></script>
