--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p id="question"></p>
         <ul id="choices"></ul>
       </section>
+      <div id="feedback"></div>
       <div id="timer">Time left: <span id="time"></span> seconds</div>
       <button id="start">Start</button>
     </main>
