--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul id="choices"></ul>
       </section>
       <div id="feedback"></div>
+      <div id="result"></div>
       <div id="timer">Time left: <span id="time"></span> seconds</div>
       <button id="start">Start</button>
     </main>
