--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <div id="result"></div>
       <div id="timer">Time left: <span id="time"></span> seconds</div>
       <button id="start">Start</button>
+      <form id="initials-form" style="display: none">
+        <label for="initials">Enter your initials:</label>
+        <input type="text" id="initials" maxlength="3" required />
+        <button type="submit">Submit</button>
+      </form>
+      <button id="restart-button" style="display: none;">Restart Quiz</button>
+      <button id="clear-button" style="display: none;">Clear Scoreboard</button>
     </main>
     <footer></footer>
     <script src="assets/script/script.js"></script>
