--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <input type="text" id="initials" maxlength="3" required />
         <button type="submit">Submit</button>
       </form>
-      <button id="restart-button" style="display: none;">Restart Quiz</button>
-      <button id="clear-button" style="display: none;">Clear Scoreboard</button>
+      <button id="restart-button" style="display: none">Restart Quiz</button>
+      <button id="clear-button" style="display: none">Clear Scoreboard</button>
     </main>
     <footer></footer>
     <script src="assets/script/script.js"></script>
